--- a/src/components/Post/PostInfo.css
+++ b/src/components/Post/PostInfo.css
@@ -197,3 +197,42 @@
 .btn--reply:hover {
   background-color: #3e8e41;
 }
+
+/* 새로운 날짜 및 장소 표시 상자 스타일 */
+.info-box {
+  border: 2px none;
+  padding: 10px;
+  border-radius: 8px;
+  background-color: #f5efef;
+  font-size: 14px;
+  margin-bottom: 20px;
+}
+
+.info-box span {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 14px;
+}
+
+.info-box span svg {
+  vertical-align: middle; 
+  margin-right: 5px; 
+  font-size: 16px; 
+}
+
+.hash-tag ul {
+  list-style: none; /* 기본 목록 스타일 제거 */
+  padding: 0; /* 기본 패딩 제거 */
+  margin: 0; /* 기본 마진 제거 */
+  display: flex; /* 플렉스 박스를 사용하여 수평 정렬 */
+  flex-wrap: wrap; /* 공간이 부족할 경우 다음 줄로 이동 */
+}
+
+.hash-tag li {
+  margin-right: 10px; /* 태그 간의 간격을 조정 */
+  padding: 8px 12px; /* 패딩 추가 */
+  background-color: #e6d1d1; /* 배경색 추가 */
+  color: black; /* 글자색 흰색으로 설정 */
+  border-radius: 20px; /* 둥근 모서리 */
+  font-size: 14px; /* 폰트 크기 조정 */
+}
