--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -133,35 +133,40 @@ $max-width: 1400px;
     }
   }
 
-  .post-item {
-    display: flex; // Use flexbox for alignment
-    align-items: center; // Vertically center items
-    margin-bottom: 10px; // Space between posts
-    padding: 15px; // Add padding for better spacing
-    border: 1px solid #e0e0e0; // Add a light border around each post
-    border-radius: 8px; // Rounded corners for posts
-    background-color: #fafafa; // Light background color for posts
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); // Add a subtle shadow for depth
+  .post-card-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); /* 최소 280px, 최대 화면에 맞게 배치 */
+    gap: 20px; /* 카드 간격 */
+  }
 
-    .post-index {
-      margin-right: 8px; // Space between index number and title
-      font-weight: bold; // Make the index number bold
+  .post-card {
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s;
+
+    &:hover {
+      transform: scale(1.03);
     }
 
-    .post-title {
-      color: #4caf50; // Change title color to light green
-      text-decoration: none; // Remove underline from links
-      transition: color 0.3s; // Smooth transition for hover effect
-
-      &:hover {
-        color: #2e7d32; // Darker shade on hover
-      }
+    .post-card-content {
+      display: flex;
+      flex-direction: column;
     }
 
-    .post-details {
-      margin-left: auto; // Pushes the details to the right
-      font-size: 0.9rem; // Adjust font size
-      color: gray; // Change color for details
+    .post-card-title {
+      font-size: 16px;
+      font-weight: bold;
+      margin-bottom: 12px;
+      color: black;
+    }
+
+    .post-card-details,
+    .post-card-period {
+      margin-top: 8px;
+      color: gray;
+      font-size: 13px;
     }
   }
 }
